test-cases/final-dump/mode_errors.wybe
def proc_inout(!p:bool) { pass }
def proc_in(p:bool) { pass }

proc_in(?p)
proc_inout(?p)
